--- a/index.html
+++ b/index.html
@@ -10,52 +10,119 @@
 </head>
 <body>
   <header id="header">
-    <h1>Fortifend</h1>
+    <img src="./images/logo-fortifend.jpg" alt="Banner Image" class="banner-image">
   </header>
 
-  <div id="container" class="gallery-container">
-    <div class="inner">
+  <div id="fullpage" onclick="this.style.display='none';"></div>
 
-      <div id="content">
-        <blockquote>
-          Lorem ipsum odor amet, consectetuer adipiscing elit. Facilisis quisque felis in curae ridiculus elit adipiscing feugiat. Augue inceptos posuere ullamcorper sodales metus curae.
-        </blockquote>
+  <div id="container">
+    <div class="content">
+      <p class="description">
+        Sed mattis sapien dolor, vehicula vestibulum enim efficitur vel. Suspendisse tempor et ipsum ac condimentum. Class aptent taciti sociosqu ad litora.
+      </p>
+    </div>
+
+    <div class="content">
+      <p class="description">
+        Coming Soon...
+      </p>
+    </div>
+
+    <div class="content">
+      <div class="gallery-container">
+        <div class="artwork-grid">
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="artwork-grid">
-        <!-- Example artwork items -->
-        <div class="artwork-item">
-          <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
-          <div class="artwork-info">
-            <h3 class="artwork-title">Character Design</h3>
-            <p class="artwork-description">Main protagonist concept art showcasing detailed armor design and weapon variations.</p>
+    </div>
+    <div class="content">
+      <div class="gallery-container">
+        <div class="artwork-grid">
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
           </div>
         </div>
-        <div class="artwork-item">
-          <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
-          <div class="artwork-info">
-            <h3 class="artwork-title">Character Design</h3>
-            <p class="artwork-description">Main protagonist concept art showcasing detailed armor design and weapon variations.</p>
-          </div>
-        </div>
-        <div class="artwork-item">
-          <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
-          <div class="artwork-info">
-            <h3 class="artwork-title">Character Design</h3>
-            <p class="artwork-description">Main protagonist concept art showcasing detailed armor design and weapon variations.</p>
-          </div>
-        </div>
-        </div>
-        <!-- Add more artwork-item divs as needed -->
       </div>
-
     </div>
   </div>
 
   <footer>
-    Footer region
+    <div class="gallery-container">
+      <div class="artwork-grid">
+        <div class="icon-item">
+          <img src="./images/mail.svg" class="icon-image">
+          <div class="icon-info">
+            <p class="icon-description">Lorem ipsum</p>
+          </div>
+        </div>
+        <div class="icon-item">
+          <img src="./images/mailbox.svg" class="icon-image">
+          <div class="icon-info">
+            <p class="icon-description">Lorem ipsum</p>
+          </div>
+        </div>
+        <div class="icon-item">
+          <img src="./images/social.svg" class="icon-image">
+          <div class="icon-info">
+            <p class="icon-description">Lorem ipsum</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
-
 
   <!-- Do not include the scripts.js or class files here - it is done by the webpack server -->
   <script src="bundle.js"></script>
