--- a/index.html
+++ b/index.html
@@ -10,23 +10,19 @@
 </head>
 <body>
   <header id="header">
-    <img src="./images/logo-fortifend.jpg" alt="Banner Image" class="banner-image">
+    <img src="./images/title-logo.png" alt="Banner Image" class="banner-image">
   </header>
 
   <div id="fullpage" onclick="this.style.display='none';"></div>
 
+  <div class="content">
+    <p class="description">
+      Sed mattis sapien dolor, vehicula vestibulum enim efficitur vel. Suspendisse tempor et ipsum ac condimentum. Class aptent taciti sociosqu ad litora.
+    </p>
+  </div>
+
   <div id="container">
-    <div class="content">
-      <p class="description">
-        Sed mattis sapien dolor, vehicula vestibulum enim efficitur vel. Suspendisse tempor et ipsum ac condimentum. Class aptent taciti sociosqu ad litora.
-      </p>
-    </div>
 
-    <div class="content">
-      <p class="description">
-        Coming Soon...
-      </p>
-    </div>
 
     <div class="content">
       <div class="gallery-container">
@@ -59,44 +55,47 @@
               <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
             </div>
           </div>
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
+
+
+          <div class="artwork-item">
+            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
+            <div class="artwork-info">
+              <h3 class="artwork-title">Lorem ipsum dolor</h3>
+              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+            </div>
+          </div>
         </div>
       </div>
 
     </div>
-    <div class="content">
-      <div class="gallery-container">
-        <div class="artwork-grid">
-          <div class="artwork-item">
-            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
-            <div class="artwork-info">
-              <h3 class="artwork-title">Lorem ipsum dolor</h3>
-              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
-            </div>
-          </div>
-          <div class="artwork-item">
-            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
-            <div class="artwork-info">
-              <h3 class="artwork-title">Lorem ipsum dolor</h3>
-              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
-            </div>
-          </div>
-          <div class="artwork-item">
-            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
-            <div class="artwork-info">
-              <h3 class="artwork-title">Lorem ipsum dolor</h3>
-              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
-            </div>
-          </div>
-          <div class="artwork-item">
-            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">
-            <div class="artwork-info">
-              <h3 class="artwork-title">Lorem ipsum dolor</h3>
-              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
+
+
+  <div class="content">
+    <p class="description">
+      Coming Soon...
+    </p>
   </div>
 
   <footer>
@@ -123,6 +122,8 @@
       </div>
     </div>
   </footer>
+
+
 
   <!-- Do not include the scripts.js or class files here - it is done by the webpack server -->
   <script src="bundle.js"></script>
