--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
     <div class="image-placeholder"></div>
   </header>
 
-  <div id="fullpage" onclick="this.style.display='none';"></div>
+  <div id="fullpage-container" onclick="this.style.display='none';">
+    <div id="fullpage" class="fullpage-image"></div>
+  </div>
 
+
+  <div class="content">
+    <p class="description">
+      Coming Soon...
+    </p>
+  </div>
   <!--  <div class="game-background"></div>-->
 
   <div id="container">
@@ -88,11 +96,6 @@
 
 
 
-  <div class="content">
-    <p class="description">
-      Coming Soon...
-    </p>
-  </div>
 
   <footer>
     <div class="gallery-container">
