--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="image-placeholder"></div>
   </header>
 
-  <div id="fullpage-container" onclick="this.style.display='none';">
-    <div id="fullpage" class="fullpage-image"></div>
+  <div id="fullpage" onclick="this.style.display='none';">
+    <div class="fullpage-image"></div>
   </div>
 
 
@@ -31,14 +31,14 @@
       <div class="gallery-container">
         <div class="artwork-grid">
           <div class="artwork-item">
-            <img src="./images/screenshot1-orthogonal.jpg" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/screenshot_hud_trade.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h3 class="artwork-title">Lorem ipsum dolor</h3>
               <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
             </div>
           </div>
           <div class="artwork-item">
-            <img src="./images/screenshot1-orthogonal.jpg" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/screenshot_terrain_hud.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h3 class="artwork-title">Lorem ipsum dolor</h3>
               <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
