--- a/index.html
+++ b/index.html
@@ -19,63 +19,63 @@
   </div>
 
 
-  <div class="content">
-    <p class="description">
-      Coming Soon...
-    </p>
-  </div>
-  <!--  <div class="game-background"></div>-->
+
 
   <div id="container">
+
+    <div class="content">
+      <div class="gallery-container">
+        <img src="./images/trailer_combat_simple.gif" alt="Game Artwork 1" class="artwork-image-large">
+      </div>
+    </div>
+
+
     <div class="content">
       <div class="gallery-container">
         <div class="artwork-grid">
           <div class="artwork-item">
             <img src="./images/screenshot_hud_trade.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
-              <h3 class="artwork-title">Lorem ipsum dolor</h3>
-              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+              <h6 class="artwork-title pixel-perfect-text">Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
             </div>
           </div>
           <div class="artwork-item">
             <img src="./images/screenshot_terrain_hud.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
-              <h3 class="artwork-title">Lorem ipsum dolor</h3>
-              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+              <h6 class="artwork-title pixel-perfect-text">Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
             </div>
           </div>
           <div class="artwork-item">
             <img src="./images/screenshot1-orthogonal.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
-              <h3 class="artwork-title">Lorem ipsum dolor</h3>
-              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>
+              <h6 class="artwork-title pixel-perfect-text">Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
             </div>
           </div>
 <!--          <div class="artwork-item">-->
 <!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
 <!--            <div class="artwork-info">-->
-<!--              <h3 class="artwork-title">Lorem ipsum dolor</h3>-->
+<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
 <!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
 <!--            </div>-->
 <!--          </div>-->
 <!--          <div class="artwork-item">-->
 <!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
 <!--            <div class="artwork-info">-->
-<!--              <h3 class="artwork-title">Lorem ipsum dolor</h3>-->
+<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
 <!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
 <!--            </div>-->
 <!--          </div>-->
 <!--          <div class="artwork-item">-->
 <!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
 <!--            <div class="artwork-info">-->
-<!--              <h3 class="artwork-title">Lorem ipsum dolor</h3>-->
+<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
 <!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
 <!--            </div>-->
 <!--          </div>-->
 <!--          <div class="artwork-item">-->
 <!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
 <!--            <div class="artwork-info">-->
-<!--              <h3 class="artwork-title">Lorem ipsum dolor</h3>-->
+<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
 <!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
 <!--            </div>-->
 <!--          </div>-->
@@ -84,14 +84,21 @@
 <!--          <div class="artwork-item">-->
 <!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
 <!--            <div class="artwork-info">-->
-<!--              <h3 class="artwork-title">Lorem ipsum dolor</h3>-->
+<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
 <!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
 <!--            </div>-->
 <!--          </div>-->
 <!--        </div>-->
+        </div>
       </div>
-
     </div>
+
+    <div class="content">
+      <div class="pixel-perfect-text">
+        Coming Soon...
+      </div>
+    </div>
+
   </div>
 
 
