--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <header id="header">
-<!--    <img src="./images/title-logo.png" alt="Banner Image" class="banner-image">-->
     <div class="image-placeholder"></div>
+    <img src="./images/title-logo.png" alt="Banner Image" class="banner-image">
   </header>
 
   <div id="fullpage" onclick="this.style.display='none';">
