--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
 </head>
 <body>
   <header id="header">
-    <div class="image-placeholder"></div>
+    <div class="cropped-image">
+      <img src="./images/capsule5.png" alt="Description of image">
+    </div>
     <img src="./images/title-logo.png" alt="Banner Image" class="banner-image">
   </header>
 
+
+
+  <div class="image-placeholder"></div>
   <div id="fullpage" onclick="this.style.display='none';">
     <div class="fullpage-image"></div>
   </div>
 
-
-
-
   <div id="container">
-
     <div class="content">
-      <div class="gallery-container">
-        <img src="./images/trailer_combat_simple.gif" alt="Game Artwork 1" class="artwork-image-large">
-      </div>
+      <img src="./images/trailer_combat_simple.gif" alt="Game Artwork 1" class="artwork-image-large">
     </div>
 
 
@@ -36,19 +35,19 @@
           <div class="artwork-item">
             <img src="./images/screenshot_hud_trade.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
-              <h6 class="artwork-title pixel-perfect-text">Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
+              <h6 class="pixel-perfect-text">Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
             </div>
           </div>
           <div class="artwork-item">
             <img src="./images/screenshot_terrain_hud.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
-              <h6 class="artwork-title pixel-perfect-text">Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
+              <h6 class="pixel-perfect-text">Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
             </div>
           </div>
           <div class="artwork-item">
             <img src="./images/screenshot1-orthogonal.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
-              <h6 class="artwork-title pixel-perfect-text">Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
+              <h6 class="pixel-perfect-text">Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
             </div>
           </div>
 <!--          <div class="artwork-item">-->
