--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="artwork-item">
       <img src="./images/title-logo.png" alt="Banner Image" class="banner-image">
     </div>
-    <div class="image-placeholder"></div>
+
 
   </header>
 
@@ -28,6 +28,18 @@
     <div class="fullpage-image"></div>
   </div>
 
+
+  <div class="marketing-content">
+    <h3 class="pixel-perfect-text tagline">Forge your fortress. Master the terrain. Withstand the onslaught.</h3>
+
+    <div class="pixel-perfect-text game-description">
+      Command the high ground in Fortifend, where 3D terrain transforms tower defense strategy. Build your medieval city with careful planning, then watch it come alive with magical warfare as you defend against seasonal threats. Beauty and brutality in perfect balance.
+    </div>
+
+    <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="pixel-perfect-text cta-button">
+      WISHLIST ON STEAM
+    </a>
+  </div>
 
   <div id="container">
     <div class="content">
