--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
 
 
   <div class="marketing-content">
-    <h3 class="pixel-perfect-text tagline">Forge your fortress. Master the terrain. Withstand the onslaught.</h3>
 
-    <div class="pixel-perfect-text game-description">
+    <div class="pixel-text-96 tagline">Forge your fortress.</div>
+    <div class="pixel-text-96 tagline">Master the terrain.</div>
+    <div class="pixel-text-96 tagline">Withstand the onslaught.</div>
+
+    <h3 class="pixel-text-64 game-description">
       Command the high ground in Fortifend, where 3D terrain transforms tower defense strategy. Build your medieval city with careful planning, then watch it come alive with magical warfare as you defend against seasonal threats. Beauty and brutality in perfect balance.
-    </div>
+    </h3>
 
     <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="pixel-perfect-text cta-button">
       WISHLIST ON STEAM
