--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
 
   <div id="container">
     <div class="content">
-      <img src="./images/trailer_combat_simple.gif" alt="Game Artwork 1" class="artwork-image-large">
+<!--      <video class="video-background" autoplay loop muted width='100%' height='100%' playsinline src="./video/trailer_combat_simple.mp4">-->
+<!--        <source src= type="video/mp4">-->
+<!--      </video>-->
+
+<!--      <video loop autoplay controls="true" width='100%' height='100%' src='./video/trailer_combat_simple.mp4' type='video/mp4'></video>-->
+      <!--<img src="./images/trailer_combat_simple.gif" alt="Game Artwork 1" class="artwork-image-large">-->
+
+      <video controls autoplay loop muted playsinline>
+        <source src="./video/trailer_combat_simple.mp4" type="video/mp4">
+      </video>
+
     </div>
 
 
