--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
 <!--      <video loop autoplay controls="true" width='100%' height='100%' src='./video/trailer_combat_simple.mp4' type='video/mp4'></video>-->
       <!--<img src="./images/trailer_combat_simple.gif" alt="Game Artwork 1" class="artwork-image-large">-->
 
+      <!-- https://stackoverflow.com/questions/20347352/html5-video-tag-not-working-in-safari-iphone-and-ipad -->
+      <!--safari -->
       <video controls autoplay loop muted playsinline>
         <source src="./video/trailer_combat_simple.mp4" type="video/mp4">
       </video>
+      <!-- safari -->
+<!--      <img id="img-tag" src="./video/trailer_combat_simple.mp4" style="width:100%;height:auto;max-width:100%;">-->
 
     </div>
 
@@ -63,19 +67,19 @@
       <div class="gallery-container">
         <div class="artwork-grid">
           <div class="artwork-item">
-            <img src="./images/screenshot_hud_trade.jpg" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/screenshot_hud_trade.webp" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6 class="pixel-perfect-text-medium">Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
             </div>
           </div>
           <div class="artwork-item">
-            <img src="./images/screenshot_terrain_hud.jpg" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/screenshot_terrain_hud.webp" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6 class="pixel-perfect-text-medium">Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
             </div>
           </div>
           <div class="artwork-item">
-            <img src="./images/screenshot1-orthogonal.jpg" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/screenshot1-orthogonal.webp" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6 class="pixel-perfect-text-medium">Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
             </div>
