--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
 
   <div class="marketing-content">
-
-    <div class="pixel-perfect-text-large tagline">Forge your fortress.</div>
-    <div class="pixel-perfect-text-large tagline">Master the terrain.</div>
-    <div class="pixel-perfect-text-large tagline">Withstand the onslaught.</div>
-
-    <h3 class="pixel-perfect-text-medium game-description">
+    <h1 class="pixel-perfect-text-large tagline">Forge your fortress</h1>
+    <h1 class="pixel-perfect-text-large tagline">Master the terrain</h1>
+    <h1 class="pixel-perfect-text-large tagline">Withstand the onslaught</h1>
+  </div>
+  <div class="marketing-content">
+    <h4 class="pixel-perfect-text-medium game-description">
       Command the high ground in Fortifend, where 3D terrain transforms tower defense strategy. Build your medieval city with careful planning, then watch it come alive with magical warfare as you defend against seasonal threats. Beauty and brutality in perfect balance.
-    </h3>
+    </h4>
 
     <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="pixel-perfect-text-medium cta-button">
       WISHLIST ON STEAM
@@ -54,11 +54,12 @@
 
       <!-- https://stackoverflow.com/questions/20347352/html5-video-tag-not-working-in-safari-iphone-and-ipad -->
       <!--safari -->
-      <video controls autoplay loop muted playsinline>
+      <video class="video-background" controls autoplay loop muted playsinline>
         <source src="./video/trailer_combat_simple.mp4" type="video/mp4">
       </video>
       <!-- safari -->
-<!--      <img id="img-tag" src="./video/trailer_combat_simple.mp4" style="width:100%;height:auto;max-width:100%;">-->
+      <!-- TODO: https://stackoverflow.com/questions/20347352/html5-video-tag-not-working-in-safari-iphone-and-ipad -->
+<!--      <img id="img-tag" class="video-background" src="./video/trailer_combat_simple.mp4" style="width:100%;height:auto;max-width:100%;">-->
 
     </div>
 
