--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
   <meta name="description" content="A brief description of your site for search engines">
   <meta name="author" content="Information about the author here">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+  <link rel="preload" href="./images/capsule5.png" as="image">
   <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <header id="header">
     <div class="cropped-image">
-      <img src="./images/capsule5.png" alt="Description of image">
+      <img src="./images/capsule6.png" alt="Description of image">
+
     </div>
 
-    <div class="image-placeholder"></div>
     <div class="banner-container">
       <img src="./images/title-logo.png" alt="Banner Image" class="banner-image">
     </div>
+
+
+    <div class="image-placeholder"></div>
 
   </header>
 
@@ -166,6 +170,6 @@
 
 
   <!-- Do not include the scripts.js or class files here - it is done by the webpack server -->
-  <script src="bundle.js"></script>
+  <script src="bundle.js" defer></script>
 </body>
 </html>
