--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
   </footer>
 
 
-
   <!-- Do not include the scripts.js or class files here - it is done by the webpack server -->
   <script src="bundle.js" defer></script>
 </body>
+<!--  <div class="pixel-grid"></div>-->
+
 </html>
