--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="banner-container">
-      <img src="./images/title-logo.png" alt="Banner Image" class="banner-image">
+      <img src="./images/title-logo-large.png" alt="Banner Image" class="banner-image">
     </div>
 
 
@@ -38,7 +38,7 @@
     <h1 class="pixel-perfect-text-large tagline">Withstand the onslaught</h1>
   </div>
   <div class="marketing-content">
-    <h4 class="pixel-perfect-text-medium game-description">
+    <h4>
       Command the high ground in Fortifend, where 3D terrain transforms tower defense strategy. Build your medieval city with careful planning, then watch it come alive with magical warfare as you defend against seasonal threats. Beauty and brutality in perfect balance.
     </h4>
 
@@ -74,19 +74,19 @@
           <div class="artwork-item">
             <img src="./images/screenshot_hud_trade.webp" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
-              <h6 class="pixel-perfect-text-medium">Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
+              <h6>Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
             </div>
           </div>
           <div class="artwork-item">
             <img src="./images/screenshot_terrain_hud.webp" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
-              <h6 class="pixel-perfect-text-medium">Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
+              <h6>Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
             </div>
           </div>
           <div class="artwork-item">
             <img src="./images/screenshot1-orthogonal.webp" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
-              <h6 class="pixel-perfect-text-medium">Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
+              <h6>Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
             </div>
           </div>
 <!--          <div class="artwork-item">-->
@@ -132,7 +132,7 @@
     </div>
 
     <div class="content">
-      <div class="pixel-perfect-text-medium">
+      <div>
         Coming Soon...
       </div>
     </div>
