--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
   <title>Fortifend</title>
   <meta name="description" content="A brief description of your site for search engines">
   <meta name="author" content="Information about the author here">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-  <link rel="preload" href="./images/capsule5.png" as="image">
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>-->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes"/>
+  <link rel="preload" href="./images/capsule6.png" as="image">
+  <link rel="preload" href="./images/title-logo-large.png" as="image">
   <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <header id="header">
     <div class="cropped-image">
-      <img src="./images/capsule6.png" alt="Description of image">
+      <img src="./images/capsule6.png" alt="Moss monster in the background>">
 
     </div>
 
     <div class="banner-container">
-      <img src="./images/title-logo-large.png" alt="Banner Image" class="banner-image">
+      <img src="./images/title-logo-large.png" class="banner-image" alt="fortifend logo">
     </div>
 
 
@@ -33,16 +35,16 @@
 
 
   <div class="marketing-content">
-    <h1 class="pixel-perfect-text-large tagline">Forge your fortress</h1>
-    <h1 class="pixel-perfect-text-large tagline">Master the terrain</h1>
-    <h1 class="pixel-perfect-text-large tagline">Withstand the onslaught</h1>
+    <h1 class="tagline">Forge your fortress</h1>
+    <h1 class="tagline">Master the terrain</h1>
+    <h1 class="tagline">Withstand the onslaught</h1>
   </div>
   <div class="marketing-content">
     <h4>
       Command the high ground in Fortifend, where 3D terrain transforms tower defense strategy. Build your medieval city with careful planning, then watch it come alive with magical warfare as you defend against seasonal threats. Beauty and brutality in perfect balance.
     </h4>
 
-    <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="pixel-perfect-text-medium cta-button">
+    <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="cta-button">
       WISHLIST ON STEAM
     </a>
   </div>
@@ -59,7 +61,10 @@
       <!-- https://stackoverflow.com/questions/20347352/html5-video-tag-not-working-in-safari-iphone-and-ipad -->
       <!--safari -->
       <video class="video-background" controls autoplay loop muted playsinline>
+<!--        <source src="./video/trailer_combat_simple.mov" type="video/mp4">-->
+        <source src="./video/trailer_combat_simple.webm" type="video/webm">
         <source src="./video/trailer_combat_simple.mp4" type="video/mp4">
+
       </video>
       <!-- safari -->
       <!-- TODO: https://stackoverflow.com/questions/20347352/html5-video-tag-not-working-in-safari-iphone-and-ipad -->
@@ -146,19 +151,19 @@
     <div class="gallery-container">
       <div class="artwork-grid">
         <div class="icon-item">
-          <img src="./images/mail.svg" class="icon-image">
+          <img src="./images/mail.svg" class="icon-image" alt="mail logo">
           <div class="icon-info">
             <p class="icon-description">Lorem ipsum</p>
           </div>
         </div>
         <div class="icon-item">
-          <img src="./images/mailbox.svg" class="icon-image">
+          <img src="./images/mailbox.svg" class="icon-image" alt="mailbox logo">
           <div class="icon-info">
             <p class="icon-description">Lorem ipsum</p>
           </div>
         </div>
         <div class="icon-item">
-          <img src="./images/social.svg" class="icon-image">
+          <img src="./images/social.svg" class="icon-image"  alt="social media">
           <div class="icon-info">
             <p class="icon-description">Lorem ipsum</p>
           </div>
