--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="./images/capsule6.png" as="image">
   <link rel="preload" href="./images/title-logo-large.png" as="image">
   <link rel="icon" type="image/png" href="favicon.png">
-</head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.43f6d3b2317aad912683.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
@@ -138,7 +138,7 @@
 
     <div class="content">
       <div>
-        Coming Soon...
+        Coming Soon.
       </div>
     </div>
 
