--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="./images/capsule6.png" as="image">
   <link rel="preload" href="./images/title-logo-large.png" as="image">
   <link rel="icon" type="image/png" href="favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.43f6d3b2317aad912683.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.d95e7d7b4dcfc6db1edb.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
@@ -51,25 +51,6 @@
 
   <div id="container">
     <div class="content">
-<!--      <video class="video-background" autoplay loop muted width='100%' height='100%' playsinline src="./video/trailer_combat_simple.mp4">-->
-<!--        <source src= type="video/mp4">-->
-<!--      </video>-->
-
-<!--      <video loop autoplay controls="true" width='100%' height='100%' src='./video/trailer_combat_simple.mp4' type='video/mp4'></video>-->
-      <!--<img src="./images/trailer_combat_simple.gif" alt="Game Artwork 1" class="artwork-image-large">-->
-
-      <!-- https://stackoverflow.com/questions/20347352/html5-video-tag-not-working-in-safari-iphone-and-ipad -->
-      <!--safari -->
-      <video class="video-background" controls autoplay loop muted playsinline>
-<!--        <source src="./video/trailer_combat_simple.mov" type="video/mp4">-->
-        <source src="./video/trailer_combat_simple.webm" type="video/webm">
-        <source src="./video/trailer_combat_simple.mp4" type="video/mp4">
-
-      </video>
-      <!-- safari -->
-      <!-- TODO: https://stackoverflow.com/questions/20347352/html5-video-tag-not-working-in-safari-iphone-and-ipad -->
-<!--      <img id="img-tag" class="video-background" src="./video/trailer_combat_simple.mp4" style="width:100%;height:auto;max-width:100%;">-->
-
     </div>
 
 
@@ -89,7 +70,7 @@
             </div>
           </div>
           <div class="artwork-item">
-            <img src="./images/screenshot1-orthogonal.webp" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/screenshot_orthogonal.webp" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6>Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
             </div>
@@ -144,6 +125,25 @@
 
   </div>
 
+  <!-- In your index.html or template -->
+  <div class="trailer-section">
+    <h2>Game Trailer</h2>
+
+    <div id="game-trailer" class="video-placeholder" data-video-src="trailer_combat_simple.mp4">
+      <div class="play-button">▶</div>
+      <p>Click to watch trailer</p>
+    </div>
+  </div>
+
+  <!-- Add additional placeholders as needed -->
+  <div class="gameplay-section">
+    <h2>Gameplay Preview</h2>
+
+    <div id="gameplay-preview" class="video-placeholder" data-video-src="trailer_combat_simple.webm">
+      <div class="play-button">▶</div>
+      <p>Click to watch gameplay</p>
+    </div>
+  </div>
 
 
 
@@ -171,7 +171,7 @@
       </div>
     </div>
   </footer>
-  
+
   <!-- Do not include the scripts.js or class files here - it is done by the webpack server -->
 </body>
 </html>
