--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   <meta name="author" content="Information about the author here">
 <!--  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes"/>
-  <link rel="preload" href="./images/capsule6.png" as="image">
-  <link rel="preload" href="./images/title-logo-large.png" as="image">
+  <link rel="preload" href="./images/capsule6.webp" as="image">
+  <link rel="preload" href="./images/title-logo-large.webp" as="image">
   <link rel="icon" type="image/png" href="favicon.png">
 <script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.d95e7d7b4dcfc6db1edb.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
-      <img src="./images/capsule6.png" alt="Moss monster in the background>">
+      <img src="./images/capsule6.webp" alt="Moss monster in the background>">
 
     </div>
 
     <div class="banner-container">
-      <img src="./images/title-logo-large.png" class="banner-image" alt="fortifend logo">
+      <img src="./images/title-logo-large.webp" class="banner-image" alt="fortifend logo">
     </div>
 
 
