--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes"/>
   <link rel="preload" href="./images/capsule6.webp" as="image">
   <link rel="preload" href="./images/title-logo-large.webp" as="image">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="./images/favicon.png">
 <script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.92da8054ac867e57bb57.js"></script></head>
 <body>
   <header id="header">
