--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 <!--  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes"/>
   <link rel="preload" href="./images/capsule6.webp" as="image">
-  <link rel="preload" href="./images/title-logo-large.webp" as="image">
+  <link rel="preload" href="./images/title-logo.webp" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.92da8054ac867e57bb57.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.5f6c3897e170117d42a7.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
-      <img src="./images/capsule6.webp" alt="Moss monster in the background>">
+      <img src="./images/capsule6.webp" width="450px"  alt="Moss monster in the background>">
 
     </div>
 
     <div class="banner-container">
-      <img src="./images/title-logo-large.webp" class="banner-image" alt="fortifend logo">
+      <img src="./images/title-logo.webp" width="600px" class="banner-image" alt="fortifend logo">
     </div>
 
 
@@ -50,10 +50,6 @@
   </div>
 
   <div id="container">
-    <div class="content">
-    </div>
-
-
     <div class="content">
       <div class="gallery-container">
         <div class="artwork-grid">
