--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #2b222a;">
 <head>
   <meta charset="utf-8">
   <title>Fortifend</title>
@@ -7,14 +7,14 @@
   <meta name="author" content="Information about the author here">
 <!--  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes"/>
-  <link rel="preload" href="./images/capsule6.webp" as="image">
+  <link rel="preload" href="./images/capsule7.webp" as="image">
   <link rel="preload" href="./images/title-logo.webp" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
 <body>
   <header id="header">
     <div class="cropped-image">
-      <img src="./images/capsule6.webp"  alt="Moss monster in the background>">
+      <img src="./images/capsule7.webp"  alt="Moss monster in the background>">
 <!--      <img src="./images/capsule6.webp" width="450px"  alt="Moss monster in the background>">-->
 
     </div>
