--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #2b222a;">
 <head>
   <meta charset="utf-8">
   <title>Fortifend</title>
@@ -10,7 +10,7 @@
   <link rel="preload" href="./images/capsule7.webp" as="image">
   <link rel="preload" href="./images/title-logo.webp" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.e53914fbcaaeced1b454.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.78ed57eee24d85fb3b70.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
@@ -55,61 +55,23 @@
       <div class="gallery-container">
         <div class="artwork-grid">
           <div class="artwork-item">
-            <img src="./images/screenshot_hud_trade.webp" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/thumbnails/screenshot_hud_trade-512.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6>Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
             </div>
           </div>
           <div class="artwork-item">
-            <img src="./images/screenshot_terrain_hud.webp" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/thumbnails/screenshot_terrain_hud-512.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6>Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
             </div>
           </div>
           <div class="artwork-item">
-            <img src="./images/screenshot_orthogonal.webp" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images//thumbnails/screenshot_orthogonal-512.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6>Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
             </div>
           </div>
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-
-
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
         </div>
       </div>
     </div>
