--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,20 @@
   <meta name="author" content="Information about the author here">
 <!--  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes"/>
-  <link rel="preload" href="./images/capsule7.webp" as="image">
-  <link rel="preload" href="./images/title-logo.webp" as="image">
+  <link rel="preload" href="./images/capsule7.png" as="image">
+  <link rel="preload" href="./images/title-logo.png" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
 </head>
 <body>
   <header id="header">
     <div class="cropped-image">
-      <img src="./images/capsule7.webp"  alt="Moss monster in the background>">
+      <img src="./images/capsule7.png"  alt="Moss monster in the background>">
 <!--      <img src="./images/capsule6.webp" width="450px"  alt="Moss monster in the background>">-->
 
     </div>
 
     <div class="banner-container">
-      <img src="./images/title-logo.webp" width="600px" class="banner-image" alt="fortifend logo">
+      <img src="./images/title-logo.png" width="600px" class="banner-image" alt="fortifend logo">
     </div>
 
 
@@ -55,61 +55,23 @@
       <div class="gallery-container">
         <div class="artwork-grid">
           <div class="artwork-item">
-            <img src="./images/screenshot_hud_trade.webp" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/thumbnails/screenshot_hud_trade-512.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6>Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
             </div>
           </div>
           <div class="artwork-item">
-            <img src="./images/screenshot_terrain_hud.webp" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/thumbnails/screenshot_terrain_hud-512.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6>Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
             </div>
           </div>
           <div class="artwork-item">
-            <img src="./images/screenshot_orthogonal.webp" alt="Game Artwork 1" class="artwork-image">
+            <img src="./images/thumbnails/screenshot_orthogonal-512.jpg" alt="Game Artwork 1" class="artwork-image">
             <div class="artwork-info">
               <h6>Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
             </div>
           </div>
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-
-
-<!--          <div class="artwork-item">-->
-<!--            <img src="./images/boon_placeholder.png" alt="Game Artwork 1" class="artwork-image">-->
-<!--            <div class="artwork-info">-->
-<!--              <h6 class="artwork-title">Lorem ipsum dolor</h6>-->
-<!--              <p class="artwork-description">Suspendisse potenti. Morbi ut leo sit amet. </p>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
         </div>
       </div>
     </div>
